tests/lean/389.lean.expected.out
389.lean:7:14-7:17: error: application type mismatch
  getFoo bar
argument
  bar
has type
  Bar Nat : Type
but is expected to have type
  Foo ?A : Type
getFoo bar.toFoo : Nat
